--- a/app/main/templates/main/home.html
+++ b/app/main/templates/main/home.html
@@ -43,6 +43,11 @@
      crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=JetBrains+Mono:wght@400;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     <script type="application/ld+json">
+    <link rel="icon" type="image/png" href="{% static 'main/images/favicon-96x96.png' %}" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="{% static 'main/images/favicon.svg' %}" />
+    <link rel="shortcut icon" href="{% static 'main/images/favicon.ico' %}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'main/images/apple-touch-icon.png' %}" />
+    <link rel="manifest" href="{% static 'main/images/site.webmanifest' %}" />
     {
         "@context": "https://schema.org",
         "@type": "WebApplication",
@@ -71,17 +76,11 @@
             "Mobile-friendly interface"
         ],
         "inLanguage": ["en", "kk", "ru"],
-        "aggregateRating": {
-            "@type": "AggregateRating",
-            "ratingValue": "4.8",
-            "ratingCount": "1247",
-            "bestRating": "5",
-            "worstRating": "1"
-        },
-        "screenshot": "https://neverhard.com/static/main/images/screenshot.jpg",
         "author": {
             "@type": "Organization",
-            "name": "Grade Prediction Calculator"
+            "name": "NeverHard",
+            "url": "https://neverhard.com",
+            "logo": "https://neverhard.com/static/main/images/logo.png",
         }
     }
     </script>
