--- a/app/main/templates/main/home.html
+++ b/app/main/templates/main/home.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" data-lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ENNY6LFLXM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ENNY6LFLXM');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Grade Calculator - What Grade Do I Need on My Final? | GPA & Final Exam Calculator</title>
